# for display continuity sake please use 2 spaces instead of tabs

2012-04-19 mmichaud <michael.michaud@free.fr>
  * Improved NoderPlugIn to be able to process features selected in several 
    layers and to make use of it in new plugins to be added in the mouse context 
    menu.
  * Add the following plugins in layer view mouse menu :
    - org.openjump.core.ui.plugin.mousemenu.NodeFeaturesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.NodeLinesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.NodePolygonsPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SplitFeaturesPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SplitLinesNodePolygonsPlugIn
    - org.openjump.core.ui.plugin.mousemenu.SpliPolygonsNodeLinesPlugIn
  
2012-04-19 ede
  * Fix bug #3519264

2012-04-18 Matthias Scholz <ms@jammerhund.de>
  * Fixed a NPE in the SuperZoomPanTool.deactivate()

2012-04-14 mmichaud <michael.michaud@free.fr>
  * Fixed a bug in WarpingPanel arising when the active frame is not a
    LayerManagerProxy (HTMLFrame for example)

2012-04-13 ede
  * fix NPE when drawing invalid geometries
  * new info icon and cursor based on famfam silk
  * new installer image based on stefan's design chosen by user list voting

2012-04-13 mmichaud <michael.michaud@free.fr>
  * Add a densify function to Tools > Analysis > Geometry function
  
2012-04-11 mmichaud <michael.michaud@free.fr>
  * New CreateGridPlugIn for OpenJUMP 1.6 (see also FR 2716201)

2012-04-09 ede
  * bugfix 3510832 "Changing schema with attribute table opened throw exception"
    https://sourceforge.net/tracker/index.php?func=detail&aid=3510832&group_id=118054&atid=679906
    NOTE: FeatureInfo is not updated, this is no simple issue to solve as schema modification
          replaces the whole featurecollection for the layer, which let's the layer loose selection
          and the attribute table loose the old feature object
    WORKAROUND: simply close and reopen it